[gd_scene load_steps=3 format=3 uid="uid://cvsnhiiys4k7o"]

[ext_resource type="Script" uid="uid://dfahmhgof5c7k" path="res://Scripts/UI/custom_tabs_for_ui.gd" id="1_wuoek"]
[ext_resource type="Script" uid="uid://u6ct70radtmq" path="res://Scripts/UI/UITabs/tables_page.gd" id="2_fboy8"]

[node name="CustomTabsForUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wuoek")

[node name="SettingsPage" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SettingsPage"]
offset_left = -4.0
offset_top = 104.0
offset_right = 1157.0
offset_bottom = 654.0
color = Color(0.133783, 0.609139, 0.688068, 1)

[node name="ShopPage" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ShopPage"]
offset_left = -4.0
offset_top = 104.0
offset_right = 1157.0
offset_bottom = 654.0
color = Color(0.830367, 0.541102, 0.186939, 1)

[node name="TablesPage" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_fboy8")

[node name="ColorRect" type="ColorRect" parent="TablesPage"]
layout_mode = 0
offset_left = -4.0
offset_top = 104.0
offset_right = 1157.0
offset_bottom = 654.0
color = Color(0.897838, 0.431297, 0.607481, 1)

[node name="TablesGridContainer" type="GridContainer" parent="TablesPage"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TabButtonHBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 104.0
theme_override_constants/separation = 30

[node name="TablesButton" type="Button" parent="TabButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tables"

[node name="ShopButton" type="Button" parent="TabButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shop"

[node name="SettingsButton" type="Button" parent="TabButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"
